.provarCaches/00D5f000005vwGkEAI/objects/rstkf__statementbuilder__c.object
<CustomObject>
    <description>statementbuilder__c</description>
    <fields>
        <fullName>rstkf__budgeteverexisted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Ever Existed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__budgetexists__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Exists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__buildrebuildbudgetdata__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include budgets?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__buildrebuildfromhistory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Build/rebuild stmt from posting history?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__buildrebuildfromyear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Build/rebuild stmt from year</label>
        <referenceTo>rstkf__glyear__c</referenceTo>
        <relationshipName>fromyearstatementbuilders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__buildrebuildstmtentrydata__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include statement entries?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__buildrebuildthruperiod__c</fullName>
        <label>Build/rebuild stmt thru period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__buildrebuildthruyear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Build/rebuild stmt thru year</label>
        <referenceTo>rstkf__glyear__c</referenceTo>
        <relationshipName>thruyearstatementbuilders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__confirmthis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are you sure?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__effectiveglyear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current fiscal year</label>
        <referenceTo>rstkf__glyear__c</referenceTo>
        <relationshipLabel>ZZ_Statement Builder (Current fiscal year)</relationshipLabel>
        <relationshipName>statementbuilders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__effectiveperiod__c</fullName>
        <label>Current fiscal period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__effectiveyear__c</fullName>
        <label>Effective Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glclose__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Period Close</label>
        <referenceTo>rstkf__glclose__c</referenceTo>
        <relationshipLabel>ZZ_Statement Builder</relationshipLabel>
        <relationshipName>statementbuilders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Financial Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>ZZ_Statement Builder (Financial Company)</relationshipLabel>
        <relationshipName>statementbuilders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__operation__c</fullName>
        <label>Operation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Proceed as part of current period close</fullName>
                    <default>true</default>
                    <label>Proceed as part of current period close</label>
                </value>
                <value>
                    <fullName>Import Budget Data Only to Financial Reports</fullName>
                </value>
                <value>
                    <fullName>Roll Financial Data up to parent company prior to Period Close</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__parentglclose__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Financial Period Close</label>
        <referenceTo>rstkf__glclose__c</referenceTo>
        <relationshipLabel>ZZ_Statement Builder (Parent Financial Period Close)</relationshipLabel>
        <relationshipName>statementbuilders2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__parentglcmp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>ZZ_Statement Builder (Parent Company)</relationshipLabel>
        <relationshipName>parentglcmpstatementbuilders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__parentglyear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Year</label>
        <referenceTo>rstkf__glyear__c</referenceTo>
        <relationshipLabel>ZZ_Statement Builder (Parent Year)</relationshipLabel>
        <relationshipName>parentglyearstatementbuilders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__stmtentrieseverexisted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Statement Entries Ever Exist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__stmtentriesexist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Statement Entries Exist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__subsidiaryglcmp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subsidiary Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>ZZ_Statement Builder (Subsidiary Company)</relationshipLabel>
        <relationshipName>subsidiaryglcmpstatementbuilders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__subsidiaryglyear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subsidiary Year</label>
        <referenceTo>rstkf__glyear__c</referenceTo>
        <relationshipLabel>ZZ_Statement Builder (Subsidiary Year)</relationshipLabel>
        <relationshipName>subsidiaryglyearstatementbuilders</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Build Financial Stmts Accounting Data</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZZ_Statement Builder</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>